--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,8 +17,8 @@
 	</listener>
 
 	<!-- Processes application requests -->
-	<servlet>
-		<!-- DistpatcherServlet appServlet = new DispathcerServlis(); -->
+	<!-- DistpatcherServlet appServlet = new DispathcerServlis(); -->
+	<servlet>	<!-- <bean> + servlet을 상속받은 클래스 (예시:BoardController)-->
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet
 		</servlet-class>
@@ -30,6 +30,7 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
+	<!-- @WebServlet("/board/*")과 동일 -->
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
@@ -38,7 +39,8 @@
 	<!-- 한글처리(UTF-8) -->
 	<filter>
 		<filter-name>encoding</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter
+		</filter-class>
 		<init-param>
 			<param-name>encoding</param-name>
 			<param-value>UTF-8</param-value>
